Added Structured Concurrency experimentation