@@ -5,52 +5,41 @@
     <parent>
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-starter-parent</artifactId>
-        <version>3.2.0</version>
+        <version>3.2.4</version>
         <relativePath/> <!-- lookup parent from repository -->
     </parent>
-    <groupId>at.kocmana</groupId>
-    <artifactId>async-controller</artifactId>
+
+    <groupId>at.kocmana.loomplayground</groupId>
+    <artifactId>project-loom-playground</artifactId>
     <version>0.0.1-SNAPSHOT</version>
-    <name>async-controller</name>
-    <description>async-controller</description>
+    <name>project-loom-playground</name>
+    <description>project-loom-playground</description>
+
+    <packaging>pom</packaging>
+    <modules>
+        <module>structured-concurrency</module>
+        <module>loom-spring-boot</module>
+    </modules>
+
     <properties>
-        <java.version>21</java.version>
+        <java.version>22</java.version>
     </properties>
+
     <dependencies>
-        <dependency>
-            <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter-web</artifactId>
-        </dependency>
-
-        <dependency>
-            <groupId>org.projectlombok</groupId>
-            <artifactId>lombok</artifactId>
-            <optional>true</optional>
-        </dependency>
-
-        <dependency>
-            <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter-test</artifactId>
-            <scope>test</scope>
-        </dependency>
     </dependencies>
 
     <build>
         <plugins>
             <plugin>
-                <groupId>org.springframework.boot</groupId>
-                <artifactId>spring-boot-maven-plugin</artifactId>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <version>3.8.0</version>
                 <configuration>
-                    <excludes>
-                        <exclude>
-                            <groupId>org.projectlombok</groupId>
-                            <artifactId>lombok</artifactId>
-                        </exclude>
-                    </excludes>
+                    <release>22</release> <!-- <release>13/14/15</release> -->
+                    <compilerArgs>--enable-preview</compilerArgs>
                 </configuration>
             </plugin>
         </plugins>
     </build>
-
 
 </project>
